[package]
name = "modular-bitfield-to-value-impl"
version = "0.1.0"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
authors = ["Linus Leo Stöckli <https://github.com/hacknus>"]
description = "A platform agnostic implementation for the modular-bitfield crate"
edition = "2021"
keywords = ["bitfields", "modular-bitfield"]
repository = "https://github.com/hacknus/modular-bitfield-to-value "
readme = "README.md"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
modular-bitfield = "0.11.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0.37"
